data/derived/sp14/progs/unify/prog0950.ml.out
Characters 200-221:
  removeZero (add (padZero l1 l2));;
             ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
